--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,3 +4,8 @@ body,
   width: 100%;
   height: 100%;
 }
+
+button:focus, [type='checkbox']:focus, [type='radio']:focus {
+  outline: none;
+  box-shadow: none;
+}
