fix: merge conflicts fixed

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -23,7 +23,7 @@ span svg {
 
 .trade-select > div:first-child > div:first-child > div,
 .market-select > div:first-child > div:first-child > div {
-  color: #708090;
+  color: #9CA3AF;
 }
 
 .market-select > div,
