--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -82,3 +82,17 @@ select:-webkit-autofill:focus {
   width: 100%;
   height: 800px;
 }
+
+@layer utilities {
+  @variants responsive {
+    /* Chrome, Safari and Opera */
+    .no-scrollbar::-webkit-scrollbar {
+      display: none;
+    }
+
+    .no-scrollbar {
+      -ms-overflow-style: none; /* IE and Edge */
+      scrollbar-width: none; /* Firefox */
+    }
+  }
+}
